--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<title>proj7dodatkowy</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="css/style.prefixed.css">
 	</head>
 	<body>
-		
+		<div class="main">
+			<section class="header"></section>
+			<section class="aboutus"></section>
+			<section class="service"></section>
+			<section class="whatwedo"></section>
+			<section class="ourworks"></section>
+			<section class="contactus"></section>
+			<section class="footer"></section>
+		</div>
 	</body>
 </html>
