Add header, aboutus

--- a/index.html
+++ b/index.html
@@ -3,18 +3,37 @@
 	<head>
 		<title>proj7dodatkowy</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/style.prefixed.css">
 	</head>
 	<body>
 		<div class="main">
-			<section class="header"></section>
-			<section class="aboutus"></section>
+			<section class="header">
+				<div class="container">
+					<img class="eclipse" src="http://i67.tinypic.com/67qw3m.png" alt="eclipse">
+					<p class="textcontainer bigtext">working<br>with design lab</p>
+					<p class="textcontainer smalltext">We’ve been helping startups launch and grow their businesses. We help you to fill the gap between development, design and product menagment</p>
+					<a href="#"><img src="http://i66.tinypic.com/2pyrcxu.png" alt="eclipse"></a>
+				</div>
+			</section>
+			<section class="aboutus">
+				<div class="container">
+					<div class="quadro">
+						<h1>about us</h1>
+						<p class="textcontainer">When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are integrated, iterative and agile</p>
+						<p class="smalltextcontainer">Our approach unifes design, development and product management to create exeptional products. We start each project by understanding your business goals, the user's needs and the product requirements. Then we help translate them into effective and elegant solutions.</p>
+					</div>
+				</div>
+			</section>
 			<section class="service"></section>
 			<section class="whatwedo"></section>
 			<section class="ourworks"></section>
 			<section class="contactus"></section>
 			<section class="footer"></section>
 		</div>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 	</body>
 </html>
