--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
 					</div>
 				</div>
 			</section>
-			<section class="service"></section>
-			<section class="whatwedo"></section>
+			<section class="service">
+				<div class="container">
+					<div class="quadro">
+						<h1>services</h1>
+						<p class="textcontainer">Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.<br> The outcome of this scoping session is a proposal or high-level statement of work. Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+					</div>
+				</div>
+			</section>
+			<section class="whatwedo">
+				<div class="container">
+					<div class="quadro">
+						<h1>what we do</h1>
+					</div>
+				</div>
+			</section>
 			<section class="ourworks"></section>
 			<section class="contactus"></section>
 			<section class="footer"></section>
