--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
 					</div>
 				</div>
 			</section>
-			<section class="ourworks"></section>
+			<section class="ourworks">
+				<div class="pic1"></div>
+				<div class="pic2"></div>
+				<div class="pic3"></div>
+				<div class="pic4"></div>
+				<div class="pic5"></div>
+				<div class="pic6"></div>
+			</section>
 			<section class="contactus"></section>
 			<section class="footer"></section>
 		</div>
