--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
 				<div class="pic5"></div>
 				<div class="pic6"></div>
 			</section>
-			<section class="contactus"></section>
+			<section class="contactus">
+				<div class="container">
+					<div class="quadro">
+						<h1>CONTACT us</h1>
+						<p class="textcontainer">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve. </p>
+						<button type="submit" class="btn btn-info">CONTACT US</button>
+					</div>
+				</div>
+			</section>
 			<section class="footer"></section>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
