--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
 					<div class="quadro">
 						<h1>CONTACT us</h1>
 						<p class="textcontainer">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve. </p>
-						<button type="submit" class="btn btn-info">CONTACT US</button>
+						<button type="submit" class="btn btn-info buttonContact">CONTACT US</button>
 					</div>
 				</div>
 			</section>
 			<section class="footer">
+			<img src="http://i65.tinypic.com/14b5b0m.png"><span>© 2014. All Rights Reserved Ellipsis.com</span>
 			</section>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
