--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
 				<div class="container">
 					<div class="quadro">
 						<h1>what we do</h1>
+						<p></p>
 						<a href="#"><img src="http://i63.tinypic.com/2e5p92r.png" alt="icon1"></a>
 						<h3>DESIGN</h3>
 						<p class="textcontainer">Our design practice offers a full range of services including branding strategy, interaction and visual design and user experience testing. 
 						Throughout your project, our designers create and implement visual designs and workflows, solicit user feedback, and work with you to make sure what gets built is what is needed. </p>
-						<a href="#"><img src="http://i65.tinypic.com/28hd7k6.png" alt="icon1"></a>
+						<a href="#"><img src="http://i65.tinypic.com/28hd7k6.png" alt="icon2"></a>
 						<h3>DEVELOPMENT</h3>
 						<p class="textcontainer">All engineers are fluent in the latest enterprise, mobile and web development technologies. They collaborate with your team to write, test, and improve code on a daily basis, using proven practices such as test-driven development and pair programing. </p>
-						<a href="#"><img src="http://i67.tinypic.com/2im3k8h.png" alt="icon1"></a>
+						<a href="#"><img src="http://i67.tinypic.com/2im3k8h.png" alt="icon3"></a>
 						<h3>PRODUCT MANAGEMENT</h3>
 						<p class="textcontainer">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve. </p>
 					</div>
@@ -69,7 +70,8 @@
 				</div>
 			</section>
 			<section class="footer">
-			<img src="http://i65.tinypic.com/14b5b0m.png"><span>© 2014. All Rights Reserved Ellipsis.com</span>
+				<img src="http://i65.tinypic.com/14b5b0m.png">
+				<span>© 2014. All Rights Reserved Ellipsis.com</span>
 			</section>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
