--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>proj7dodatkowy</title>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/style.prefixed.css">
@@ -65,7 +66,8 @@
 					<div class="quadro">
 						<h1>CONTACT us</h1>
 						<p class="textcontainer">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve. </p>
-						<button type="submit" class="btn btn-info buttonContact">CONTACT US</button>
+						<a class="btn btn-primary btn btn-info buttonContact" href="mailto:email@address.com" role="button">CONTACT US</a>
+
 					</div>
 				</div>
 			</section>
