--- a/index.html
+++ b/index.html
@@ -54,12 +54,24 @@
 				</div>
 			</section>
 			<section class="ourworks">
-				<div class="pic1"></div>
-				<div class="pic2"></div>
-				<div class="pic3"></div>
-				<div class="pic4"></div>
-				<div class="pic5"></div>
-				<div class="pic6"></div>
+				<div class="pic1">
+					<span>TOPWORKZ</span>
+				</div>
+				<div class="pic2">
+					<span>JOINT</span>
+				</div>
+				<div class="pic3">
+					<span>MARKET</span>
+				</div>
+				<div class="pic4">
+					<span>WORKTOP</span>
+				</div>
+				<div class="pic5">
+					<span>LABLE</span>
+				</div>
+				<div class="pic6">
+					<span>KYIV</span>
+				</div>
 			</section>
 			<section class="contactus">
 				<div class="container">
